style.css
@import url("https://fonts.googleapis.com/css2?family=BBH+Sans+Bogle&family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Licorice&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playwrite+NZ:wght@100..400&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik+Distressed&family=Vend+Sans:ital,wght@0,300..700;1,300..700&display=swap");
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
body {
  display: flex;
  /* flex-wrap: wrap; */
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  justify-content: center;
  background: linear-gradient(
    80deg,
    rgba(255, 255, 255, 0.721),
    rgba(255, 255, 255, 0.708)
  );
  /* background:rgba(53, 62, 128, 0.564); */
}
.card,.info {
  margin-top: 04%;
  background-color: red;
  width: 90%;
  height: fit-content;
  max-width: 500px;
  background: #1a2980d0; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to right,
    #19807fcc,
    #1a2980bd
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to right,
    #26d0cde2,
    #1a2980c8
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#CAEFD7", endColorstr="#F5BFD7", GradientType=1 );
  border-radius: 21px;
  padding: 10px;
  text-align: center;
  filter: drop-shadow(2px 2px 5px rgb(248, 244, 0));
  overflow-x: auto;
  transition: 0.5s all;
}
.search {
  width: 100%;
  height: 40px;
  /* background: red; */
}

.sub-cont {
  /* background: rgb(0, 246, 233); */
  /* width: fit-content; */
  height: 100%;
  min-width: 250px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  filter: drop-shadow(2px 2px 5px #04efbcc7);
  width: 100%;
}

#inputSearch {
  font-size: 15px;
  height: 95%;
  width: 80%;
  background: white;

  min-width: 150px;
  padding: 10px 30px;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  outline: none;
  border: 0;
  border-radius: 50px;

  /* border-left: 2px solid #00ffc8ec;
  border-top: 2px solid #00ffc8ec;
  border-bottom: 2px solid #00ffc8ec; */

  font-family: cursive;
  /* clip-path:polygon(0% 5%,5% 0%,100% 0%,100% 100%,5% 100%,0% 95%); */
}
#inputSearch::placeholder {
  color: rgba(128, 128, 128, 0.882);
}

#inputSearch:focus {
  /* background-color: #b9cbe598; */
  background: #1a29807a;
  color: white;
  outline-offset: 0px;
  border: 2px solid white;
  filter: drop-shadow(2px 2px 5px #ffffff);
}
#inputSearch:focus::placeholder {
  color: rgba(255, 255, 255, 0.882);
}

.sub-cont button {
  border: 0;
  outline: 0;
  cursor: pointer;
  background: white;
  height: 95%;
  min-width: 40px;
  max-width: 20%;
  border-radius: 50%;
  /* border-radius: 50px; */
}
.sub-cont button:hover {
  background: #05e8b7e2;
}
.search button img {
  padding-top: 3px;
  height: 23px;
}
.weather {
  font-family: "Lobster Two", sans-serif;
  font-weight: 700;
  font-style: italic;
  color: white;
  filter: drop-shadow(1px 1px 10px rgba(0, 0, 0, 0.384));
}
.weather img {
  margin-top: 20px;
  border: 0;
  outline: 0;
  height: 105px;
  width: 105px;
}
.datacont {
  /* background: red; */
  width: 100%;
  margin: auto;
  max-width: 500px;
  height: 80px;
  margin-top: 5px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  padding: 5px 3px;
}
.subdatacont {
  /* background: blue; */
  width: 40%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
}
.sub-icon {
  font-size: clamp(25px,calc(25px + 1vw), 45px);
  line-height: 1.2;
  font-weight: 700;
  color: white;
}
.sub-data {
  color: white;
  font-family: Arial, Helvetica, sans-serif;
  font-size: clamp(10px, calc(10px + 1vw), 20px);
  line-height: 1.2;
  font-weight: 700;
}
.data-percentage {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  /* font-size: 25px; */
}

.devloper{
  height: 25px;
  width: 80vw;
  max-width: 500px;
  background:#3ecbb346;
  position: fixed;
  bottom: 5px;
  left: 50%;
  transform: translateX(-50%);
  border-radius: 50px;
  color: purple;
  font-family: cursive;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 5px;
}

